--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@utils/*": ["./src/utils/*"],
-      "@images/*": ["./src/assets/iamges/*"],
+      "@images/*": ["./src/assets/images/*"],
 
 
     },
